# training-wizard

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-pages.yml
LEGAL/: Entity-CLA.md  Individual-CLA.md
assets/: style.css
concepts/: index.html
concepts/complexity/: index.html
concepts/recipe/: index.html
concepts/spec/: index.html
concepts/toml_config/: index.html
develop/: index.html
develop/coding_conventions/: index.html
develop/pydantic/: index.html
develop/regex-python/: index.html
develop/vs-code/: index.html
docs/: index.md  legal_terms.md
docs/concepts/: complexity.md  index.md  recipe.md  spec.md  toml_config.md
docs/develop/: coding_conventions.md  pydantic.md  regex-python.md  vs-code.md
docs/home/: usage.md
examples/causal_seq2seq/: README.md  config.toml
examples/cpo/: README.md  config.toml
examples/data/: diverse_sample_100.jsonl  es_pretrain.jsonl  multi_task_classification.jsonl  ranking.jsonl  seq2seq.jsonl  sequence_classification.tsv  sequence_regression.tsv  train_tokenizer.jsonl
examples/grpo/: README.md  config.toml  reward.py
examples/instruction_tuning/: README.md  config.toml
examples/knowledge_distillation/: README.md  config.toml
examples/multi_task_classification/: README.md  config.toml
examples/online_dpo/: README.md  config.toml  judge.py
examples/quantization/: README.md  config.toml
examples/rloo/: README.md  config.toml  reward_spec.py
examples/seq2seq/: README.md  config.toml
examples/sequence_classification/: README.md  config.toml
examples/sequence_regression/: README.md  config.toml
examples/t5_pretrain/: README.md  config.toml
examples/train_tokenizer/: config.toml
examples/xpo_paraphrasing/: README.md  config.toml
home/usage/: index.html
legal_terms/: index.html
search/: search_index.json
tests/: conftest.py  test_examples.py  utils.py
training_wizard/: __init__.py  __main__.py
training_wizard/commands/: __init__.py  count_parameters.py  find_all_linear_names.py  generator.py  lora_info.py  merge_adapter_main_models.py  train_tokenizer.py  training_wizard.py
training_wizard/components/: __init__.py  callbacks.py  dataset_validation.py  helper.py  hl_gauss.py  metrics.py  mlflow_auth.py  python_utils.py  reproducibility.py  utilities.py  wizard_trainer.py
training_wizard/recipes/: __init__.py  cpo.py  grpo.py  modular.py  online_dpo.py  quantize_llm.py  rloo.py
training_wizard/specs/: __init__.py  base.py  dataset.py  generation.py  judge.py  lora.py  model.py  reward.py  spec.py  trainer.py
training_wizard/specs/experimental/: __init__.py  alm_distil.py  seq2seq.py
training_wizard/specs/modules/: __init__.py  causal_seq2seq.py  instruction_tune.py  knowledge_distillation.py  module.py  multi_task_seq_cls.py  scorer.py  seq2seq.py  seq_cls.py  t5_pretrain.py
